8392686: Don't attempt to reserve address space for compressed classes as unscaled or zero-based encoding with COH enabled